--- a/ife_day9/作业.html
+++ b/ife_day9/作业.html
@@ -32,7 +32,6 @@
 
         <div class="mobile_first">
             <span class="mobile_Icon"></span>
-            <!-- <img src="file:///D:/Microsoft VS Code/IFE2019/ife_day9/作业要求/前端学院设计图-assets/Iphone Icon.png" alt="Iphone"> -->
             <div class="text">
                 <h3>Mobile First</h3>
                 <p class="content">All module are built mobile-first for maximum device compatibility.</p>
@@ -74,32 +73,32 @@
 
         </div>
 
-        <div class="button">
+        <div class="buttons">
             <button>CHECK OUT FEATURE</button>
             <button>TRY PRODUCT FOR FREE</button>
         </div>
 
-        <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Background.png" alt="">
+        <img src="img/Background.png" alt="bg">
     </div>
 
     <div class="try">
         <h2>Try Our Awesome Products</h2>
         <div class="singletan">
-            <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Singleton.png" alt="">
+            <img src="img/Singleton.png" alt="sign">
             <p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts'
                 committee, said that China will also launch design guidance for smart cars, smart map architecture and
                 standards for test grounds.</p>
         </div>
 
         <div class="hero">
-            <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Hero.png" alt="">
+            <img src="img/Hero.png" alt="sign">
             <p>Li said the smart car industry is able to enlarge the current car industry by 1 trillion yuan($158.15
                 billion) and also able to boost fast development in 5G, internet of cars, big data, artificial
                 intelligence and new-energy vehicles.</p>
         </div>
 
         <div class="pontland">
-            <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Pontland.png" alt="">
+            <img src="img/Pontland.png" alt="sign">
             <p>Zhang Junyi, a partner with NIO Capital, said that the smart car is the trend for the car industry and
                 China's auto sector will usher in a new key develpment stage with the improvement of infrastructure,
                 technology, policies and laws.</p>
@@ -109,8 +108,8 @@
     <div class=full_border>
         <div class="article">
             <div class="bird">
-                <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/bird.png" alt="">
-                <div class="margin">
+                <img src="img/bird.png" alt="bird">
+                <div class="txt right">
                     <h3>Learn How to Improve Your Personal Business</h3>
                     <p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts'
                         committee, said that China will also launch design guidance for smart cars, smart map
@@ -119,8 +118,8 @@
             </div>
 
             <div class="plants">
-                <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/plants.png" alt="">
-                <div class="margin">
+                <img src="img/plants.png" alt="plants">
+                <div class="txt left">
                     <h3>Choose Between Two Beautifully Designed Color Schemes.</h3>
                     <p>China will come up with its own smart car standards, traffic rules, laws and regulations relating
                         to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected
@@ -223,7 +222,7 @@
                     the
                     custom look you want.</p>
 
-                <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Contacts.png" alt="">
+                <img src="img/Contacts.png" alt="connection">
             </div>
         </div>
     </div>
@@ -262,13 +261,7 @@
         <div class="end">
             <h4>ENJOY YOUR LIFE</h4>
             <p>Great web UI.kit for designers,freelancers or business.</p>
-            <img src="file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Socials Buttons.png" alt="">
-            <!-- <span class="twitter"></span> 
-            <span class="facebook"></span>
-            <span class="google"></span>
-            <span class="tumbler"></span>
-            <span class="pinterest"></span>
-            <span class="linkin"></span>-->
+            <img src="img/Socials Buttons.png" alt="social_buttons">
         </div>
 
     </div>
