--- a/ife_day11/index.html
+++ b/ife_day11/index.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>复杂页面</title>
-
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
     <div class="primary">
-        <img src="images/Item 1.png" alt="towel_plane">
-        <img src="images/Item 2.png" alt="rocket">
-        <img src="images/Item 3.png" alt="game">
-        <img src="images/Add App.png" alt="add">
+        <div class="icons">
+            <img src="images/Item 1.png" alt="towel_plane">
+            <img src="images/Item 2.png" alt="rocket">
+            <img src="images/Item 3.png" alt="game">
+            <img src="images/Add App.png" alt="add">
+        </div>
 
-        <span></span>
-        <span></span>
+        <div class="settings">
+            <a class="grid" href="javascript:;"></a>
+            <a class="setting" href="javascript:;"></a>
+        </div>
     </div>
 
     <div class="secondary">
@@ -51,7 +55,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="status">
             <img src="images/" alt="">
         </div>
     </div>
@@ -68,24 +72,34 @@
 
         <div class="chats">
             <div class="search">
-                <input type="text">
+                <form>
+                    <input type="text" placeholder="search">
+                    <button type="submit"></button>
+                </form>
             </div>
-            <div class="chat1"></div>
-            <div class="chat2"></div>
-            <div class="chat3"></div>
-            <div class="chat4"></div>
-            <div class="chat5"></div>
-            <div class="chat6"></div>
-            <div class="chat7"></div>
+
+            <div class="scrollbar_hide">
+                <div class="list">
+                    <div class="chat n1"></div>
+                    <div class="chat n2"></div>
+                    <div class="chat n3"></div>
+                    <div class="chat n4"></div>
+                    <div class="chat n5"></div>
+                    <div class="chat n6"></div>
+                    <div class="chat n7"></div>
+                </div>
+            </div>
         </div>
 
         <div class="open_chat">
             <div class="bar"></div>
-            <div class="message1"></div>
-            <div class="message2"></div>
-            <div class="message3"></div>
-            <div class="message4"></div>
-            <div class="message5"></div>
+            <div class="scrollbar_hide">
+                <div class="list">
+                    <div class="message m1"></div>
+                    <div class="message m2"></div>
+                    <div class="message m3"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
